kubernetes/clusters/portland/apps/chartdb/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: chartdb
  namespace: chartdb
spec:
  selector:
    app: chartdb
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
